test/fail/Issue1609-negative-literal.agda
-- Andreas, 2015-07-13  Better parse errors for illegal type signatures

-1 : Set1
-1 = Set
